syntax = "proto3";

package report;

service ReportService {
    rpc GetReports(Empty) returns (ReportList) {}
    rpc GetReport(ReportId) returns (Report) {}
    rpc CreateReport(Report) returns (Report) {}
    rpc UpdateReport(Report) returns (Report) {}
    rpc DeleteReport(ReportId) returns (Empty) {}
    rpc MarkReport(ReportCompletion) returns (Report) {}
    rpc UpdateAdminNote(AdminNote) returns (Report) {}
}

message Empty {}

message Report {
    optional string id = 1;
    string stationId = 2;
    string stationName = 3;
    string name = 4;
    string description = 5;
    optional string adminNote = 6;
    optional string created_at = 7;
    optional bool completed = 8;
    optional string completed_at = 9;
}

message ReportId {
    string id = 1;
}

message ReportList {
    repeated Report reports = 1;
}

message ReportCompletion {
    string id = 1;
    bool completed = 2;
}

message AdminNote {
    string id = 1;
    string adminNote = 2;
}